# ft8x

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  decoder-regression.yml
artifacts/analysis/: false_decode_audit_latest.csv  false_decode_audit_latest.md
artifacts/results/latest/: summary.csv
artifacts/samples/kgoba-ft8-lib/191111_110130/: 191111_110130.txt
artifacts/samples/kgoba-ft8-lib/191111_110215/: 191111_110215.txt
artifacts/samples/kgoba-ft8-lib/191111_110615/: 191111_110615.txt
artifacts/samples/kgoba-ft8-lib/191111_110630/: 191111_110630.txt
artifacts/samples/kgoba-ft8-lib/191111_110645/: 191111_110645.txt
artifacts/samples/kgoba-ft8-lib/191111_110700/: 191111_110700.txt
artifacts/samples/kgoba-ft8-lib/websdr_test1/: websdr_test1.txt
artifacts/samples/kgoba-ft8-lib/websdr_test10/: websdr_test10.txt
artifacts/samples/kgoba-ft8-lib/websdr_test11/: websdr_test11.txt
audiolib/: Cargo.toml
audiolib/src/: lib.rs
config/: ft8rx.json  sources.json
decoder/: AGENTS.md  Cargo.toml  README.md
decoder/data/: snr_regressions.json
decoder/data/distilled/: README.md
decoder/data/distilled/ft2-mixed-deepest/: manifest.json
decoder/data/distilled/ft2-mixed-medium/: manifest.json
decoder/data/distilled/ft4-mixed-deepest/: manifest.json
decoder/data/distilled/ft4-mixed-medium/: manifest.json
decoder/docs/: recall-gap-investigation-20260321.md  wsjtx-medium-depth2-inventory.md
decoder/src/: coding.rs  crc.rs  decoder.rs  encode.rs  ftx.rs  ldpc.rs  lib.rs  main.rs  message.rs  protocol.rs  wave.rs
decoder/src/decoder/: ft2.rs  ft4.rs  ft8.rs  metrics.rs  refine.rs  search.rs  session.rs  subtract.rs
decoder/src/modes/: ft2.rs  ft4.rs  ft8.rs  mod.rs
decoder/tests/: busy_ft8_perf.rs  distilled_regressions.rs  ft8_live_stage_parity.rs  snr_regressions.rs
ft8rx/: Cargo.toml  README.md
ft8rx/src/: config.rs  main.rs  qso.rs
golden/: README.md  index.html
golden/wsjtx-vs-version/89c4c3c__darwin__arm64__macos-15.7.4__apple-m1-max__20260403T190121Z/: metadata.json
golden/wsjtx-vs-version/be6f05f__linux__x86-64__linux-6.8.0-106-generic__x86-64__20260405T175824Z/: metadata.json
rigctl/: Cargo.toml
rigctl/src/: lib.rs  mchf.rs
scripts/: archive_golden_run.py  bootstrap_mode_refs.py  build_distilled_mixed_manifest.py  build_stage_chart.py  check_rust_regression.py  disappearing_truth_audit.py  false_decode_audit.py  mode_parity.py  mode_reference.py  run_ft2_ref_decode.py  run_jt9_decode.py  run_parity_cycle.py  run_stock_decode.py  run_stock_ft2_trace.py  run_stock_ft4_component.py  run_stock_ft4_debug.py  run_stock_ft4_decode174.py  run_stock_ft4_fixed.py  run_stock_ft4_metrics.py  run_stock_ft4_search.py  run_stock_ft4_subtract.py  run_stock_ft4_trace.py
src/ft8_regr/: __init__.py  cli.py  core.py  report.py
tests/: test_ft8_regr_core.py
tests/golden/: rust_decoder_regression_expected.json
(+547 files in other folders)
