[project]
name = "ft8-regr"
version = "0.1.0"
description = "Prototype FT8 historical regression framework for WSJT-X releases"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

