[package]
name = "ft8_decoder"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "From-scratch FT8 decoder library and CLI harness"

[lib]
name = "ft8_decoder"
path = "src/lib.rs"

[[bin]]
name = "ft8-decoder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
hound = "3.5.1"
num-complex = "0.4.6"
realfft = "3.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
